# hls-multi-cradle-submodule-bug

./: cabal.project  hie.yaml  toplevel.cabal
src/: MyLib.hs
