cabal-version:      3.0
name:               toplevel
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Valentin Robert
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        deep-dep,
        less-deep-dep,
    hs-source-dirs:   src
    default-language: Haskell2010
